--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,51 +1,46 @@
 
-@media only screen and (max-width: 600px) {
+/*@media only screen 
+and (min-device-width: 360px) 
+and (max-device-width: 812px) {*/
+
 body{
-    margin: 0 auto;
     background-position: -1.5em;
     background-size: 115%;
-}
-
-header{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
     text-align: center;
 }
 
 h2{
-    margin-top: 50px;
     color: rgb( 156, 186, 181);
     font-family: 'Cormorant Garamond', serif;
     font-size: 1.5em;
-    text-align: left;
-    padding: 0 20px;
-    margin-bottom: 20px;
+    margin-top: 2em;
+    margin-bottom: 1.5em;
 }
 
 
 .Trajan-concept { 
     font-family: trajan-color, serif;
-    font-style: normal;
-    font-weight: 400;
     font-feature-settings: "ss12";
     font-size: 2em;
     line-height: 1.2em;
-    text-align: left;
-    padding: 0 20px;
-    margin-top: -5px;
-    margin-bottom: 30px;
+    margin-top: -20px;
+    margin-bottom: 1.5em;
+    text-align: center;
 }
 
 .odetteWatching{
-    max-width: 95%;
-    margin-bottom: -20px;
-    z-index: -1;
+    margin-bottom: -10%;
+    max-width: 90%;
 }
 
 .caption{
     background-color:rgb(246, 217, 208);
-    padding: 10px 20px;
     color: rgb(156, 186, 181); 
     font-family: 'Montserrat', sans-serif;
-    font-size: 0.8em;
+    font-size: 0.75em;
     line-height: 1.5em;
     text-align: left;
     max-width: 80%;
@@ -53,6 +48,7 @@ h2{
     margin: 0 auto;
     -webkit-box-shadow: 9px 14px 29px -11px rgba(156, 186, 181,1);
     margin-bottom: 20px;
+    padding: 5px 5%;
 }
 
 .about{
@@ -61,8 +57,9 @@ h2{
     font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
     line-height: 1.8em;
-    margin: 0 auto ;
+    margin: 50px auto 0 auto;
     padding: 10px 30px;
+    text-align: left;
 }
 
 .img{
@@ -75,22 +72,22 @@ h2{
 }
 
 .OdetteHandsCrossed{
+    margin-left: -3%;
     max-width: 110%;
     opacity: 50%;
-    margin-left: -3%;
+    
 }
 
 .facts_Nums{
     color: rgb(156, 186, 181);
     text-align: center;
-    margin-bottom: 30%;
+    margin: 4em auto;
 }
 
 .facts_Nums>h1{
     font-family:'Montserrat', sans-serif;
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin-top: 3rem;
-    font-weight: 900;
 }
 
 .num{
@@ -112,17 +109,309 @@ a{
 .quote{
     background-color:rgb(246, 217, 208,.5);
     text-align: center;
+    padding-bottom: 4em;
+    -webkit-box-shadow: 9px 14px 29px -11px rgba(156, 186, 181,1);
+}
+
+.quote p{
+    color: #9CBAB5;
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 3em;
+    font-weight: bold;
+    margin: 1em;
+    padding-top: 1em;
+}
+
+span{
+    font-family: 'Montserrat', sans-serif;
+    color: #9CBAB5;
+    font-size: 0.8em;
+    font-weight: bold;
+}
+
+.sources{
+    font-family: 'Times New Roman', Times, serif;
+    color: #9CBAB5;
+    text-align: center;
+    text-decoration: none;
+    padding: 3em;
+}
+
+.sources, a{
+    color: #9CBAB5;
+}
+
+
+
+footer{
+    background-color: #9CBAB5;
+    color: ivory;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.8em;
+    padding: 25px;
+    text-align: center;
+}
+
+
+
+
+
+@media only screen 
+  and (min-device-width: 740px) 
+  and (max-device-width: 767px) {
+
+
+    header{
+        display: flex;
+        max-width: 85%;
+        margin: 0 auto;
+    }
+        
+    h2{
+        font-size: 1.8em;
+        text-align: left;
+        margin-top: 20px;
+    }
+    
+    
+    .Trajan-concept { 
+        font-size: 3.2em;
+        line-height: 1.3em;
+        text-align: left;
+    }
+    
+    .odetteWatching{
+        max-width: 300px;
+        margin-top: 4em;
+        margin-bottom: -20px;
+    }
+    
+    .caption{
+        width: 333px;
+    }
+    
+    .about{
+        margin-top: auto;
+    }
+
+    .about > p{
+        padding-top: 2em;;
+        align-content: center;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .info-align{
+        margin: 0 auto;
+        display: flex;
+        max-width:80%;
+    }
+
+    .OdetteHandsCrossed{
+        max-width: 50%;
+    }
+
+    .data{
+        margin: 0 10%;
+    }
+
+    .data-1{
+        margin-right: 10%;
+    }
+    
+    .facts_Nums{
+        color: rgb(156, 186, 181);
+        text-align: center;
+        margin-bottom: 10%;
+    }
+    
+    .facts_Nums>h1{
+        font-family:'Montserrat', sans-serif;
+        font-size: 1.5rem;
+        margin-top: 3rem;
+        font-weight: 900;
+        margin-bottom: -30px;;
+    }    
+    
+    .text{
+        font-family:'Montserrat', sans-serif;
+        font-size: 0.8em;
+        margin-top: -5em;
+    }
+   
+    
+    .quote>p{
+        max-width: 70%;
+        font-size: 3rem;
+        margin: 30px auto;
+    }
+    
+}
+
+
+
+
+
+
+@media screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 2000px) { 
+
+
+body{
+    margin: 0 auto;
+    background-size: 115%;
+}
+
+header{
+    display: flex;
+    max-width: 80%;
+    margin: 0 auto;
+}
+
+
+
+h2{
+    margin-top: 50px;
+    color: rgb( 156, 186, 181);
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 1.5em;
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+
+.Trajan-concept { 
+    font-family: trajan-color, serif;
+    font-style: normal;
+    font-weight: 400;
+    font-feature-settings: "ss12";
+    font-size: 4em;
+    line-height: 1.2em;
+    text-align: left;
+    margin-top: -5px;
+    max-width: 20%;
+}
+
+
+.header-img{
+    margin-top: 100px;
+}
+
+.odetteWatching{
+    width: 95%;
+    margin-top: 20px;
+    margin-bottom: -20px;
+}
+
+.caption{
+    background-color:rgb(246, 217, 208);
+    padding: 5px 10px;
+    color: rgb(156, 186, 181); 
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.5em;
+    line-height: 1.5em;
+    text-align: left;
+    width: 80%;
+    position: relative;
+    -webkit-box-shadow: 9px 14px 29px -11px rgba(156, 186, 181,1);
+    margin: 0 4%;
+}
+
+.about{
+    background-color: rgb( 156, 186, 181,.8);
+    color: ivory;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.63em;
+    line-height: 2em;
+    margin: 0 auto ;
+    padding: 10px 30px;
+    width:100%;
+}
+.about > p{
+    max-width: 60%;
+    margin-left: 50px;
+}      
+
+#about{
+    display: flex;
+}
+
+.img{
+    font-size: 0;
+}
+
+.transparentImage{
+    width: 40%;
+    background-color: rgb( 156,186,181,.8);
+}
+
+.OdetteHandsCrossed{
+    max-width: 150%;
+    opacity: 50%;
+    margin-left: -125px;
+}
+
+.info-align{
+    margin: 0 auto;
+    display: flex;
+    max-width:80%;
+}
+
+.data{
+    margin: 0 auto;
+}
+
+.data-1{
+    margin-right: 10%;
+}
+
+.facts_Nums{
+    color: rgb(156, 186, 181);
+    text-align: center;
+    margin-bottom: 10%;
+}
+
+.facts_Nums>h1{
+    font-family:'Montserrat', sans-serif;
+    font-size: 1.5rem;
+    margin-top: 3rem;
+    font-weight: 900;
+    margin-bottom: -30px;;
+}
+
+.num{
+    font-size: 5rem;
+    font-family: trajan-color, serif;
+    font-feature-settings: "ss14";
+    line-height: 1em;
+    text-justify: auto;
+}
+
+a{
+    text-decoration: none;
+}
+
+.text{
+    font-family:'Montserrat', sans-serif;
+    font-size: 0.8em;
+    margin-top: -5em;
+}
+
+.quote{
+    background-color:rgb(246, 217, 208,.5);
+    text-align: center;
     padding-bottom: 30px;
     -webkit-box-shadow: 9px 14px 29px -11px rgba(156, 186, 181,1);
 }
 
 .quote>p{
+    max-width: 70%;
     font-family: 'Cormorant Garamond', serif;
     color: #9CBAB5;
-    font-size: 2.5rem;
-    margin: 1em;
+    font-size: 3rem;
     padding-top: 1em;
-    
+    margin: 30px auto;
 }
 
 .sources{
@@ -152,381 +441,10 @@ footer{
     color: ivory;
     font-family: 'Montserrat', sans-serif;
 }
-}
+  }
 
 
-
-@media only screen and (min-width: 600px) {
-
-    body{
-        margin: 0 auto;
-        background-size: 115%;
-    }
-    
-    header{
-        display: flex;
-        max-width: 80%;
-        margin: 0 auto;
-    }
-    
-    
-    
-    h2{
-        margin-top: 50px;
-        color: rgb( 156, 186, 181);
-        font-family: 'Cormorant Garamond', serif;
-        font-size: 1.5em;
-        text-align: left;
-        margin-bottom: 20px;
-    }
-    
-    
-    .Trajan-concept { 
-        font-family: trajan-color, serif;
-        font-style: normal;
-        font-weight: 400;
-        font-feature-settings: "ss12";
-        font-size: 4em;
-        line-height: 1.2em;
-        text-align: left;
-        margin-top: -5px;
-        max-width: 20%;
-    }
-    
-
-    .header-img{
-        margin-top: 100px;
-    }
-
-    .odetteWatching{
-        width: 95%;
-        margin-top: 20px;
-        margin-bottom: -20px;
-    }
-    
-    .caption{
-        background-color:rgb(246, 217, 208);
-        padding: 5px 10px;
-        color: rgb(156, 186, 181); 
-        font-family: 'Montserrat', sans-serif;
-        font-size: 0.5em;
-        line-height: 1.5em;
-        text-align: left;
-        width: 80%;
-        position: relative;
-        -webkit-box-shadow: 9px 14px 29px -11px rgba(156, 186, 181,1);
-        margin: 0 4%;
-    }
-    
-    .about{
-        background-color: rgb( 156, 186, 181,.8);
-        color: ivory;
-        font-family: 'Montserrat', sans-serif;
-        font-size: 0.63em;
-        line-height: 2em;
-        margin: 0 auto ;
-        padding: 10px 30px;
-        width:100%;
-    }
-    .about > p{
-        max-width: 60%;
-        margin-left: 50px;
-    }      
-
-    #about{
-        display: flex;
-    }
-
-    .img{
-        font-size: 0;
-    }
-    
-    .transparentImage{
-        width: 40%;
-        background-color: rgb( 156,186,181,.8);
-    }
-    
-    .OdetteHandsCrossed{
-        max-width: 150%;
-        opacity: 50%;
-        margin-left: -125px;
-    }
-
-    .info-align{
-        margin: 0 auto;
-        display: flex;
-        max-width:80%;
-    }
-
-    .data{
-        margin: 0 auto;
-    }
-
-    .data-1{
-        margin-right: 10%;
-    }
-    
-    .facts_Nums{
-        color: rgb(156, 186, 181);
-        text-align: center;
-        margin-bottom: 10%;
-    }
-    
-    .facts_Nums>h1{
-        font-family:'Montserrat', sans-serif;
-        font-size: 1.5rem;
-        margin-top: 3rem;
-        font-weight: 900;
-        margin-bottom: -30px;;
-    }
-    
-    .num{
-        font-size: 5rem;
-        font-family: trajan-color, serif;
-        font-feature-settings: "ss14";
-        line-height: 1em;
-        text-justify: auto;
-    }
-    
-    a{
-        text-decoration: none;
-    }
-    
-    .text{
-        font-family:'Montserrat', sans-serif;
-        font-size: 0.8em;
-        margin-top: -5em;
-    }
-    
-    .quote{
-        background-color:rgb(246, 217, 208,.5);
-        text-align: center;
-        padding-bottom: 30px;
-        -webkit-box-shadow: 9px 14px 29px -11px rgba(156, 186, 181,1);
-    }
-    
-    .quote>p{
-        max-width: 70%;
-        font-family: 'Cormorant Garamond', serif;
-        color: #9CBAB5;
-        font-size: 3rem;
-        padding-top: 1em;
-        margin: 30px auto;
-    }
-    
-    .sources{
-        font-family: 'Times New Roman', Times, serif;
-        color: #9CBAB5;
-        text-align: center;
-        text-decoration: none;
-        padding-top:50px;
-        padding-bottom: 20px;
-    }
-    
-    .sources, a{
-        color: #9CBAB5;
-    }
-    
-    span{
-        font-family: 'Montserrat', sans-serif;
-        color: #9CBAB5;
-        font-size: 0.8em;
-        font-weight: bold;
-    }
-    
-    footer{
-        background-color: #9CBAB5;
-        padding: 10px;
-        text-align: center;
-        color: ivory;
-        font-family: 'Montserrat', sans-serif;
-    }
-}
-
-@media only screen and (min-width: 900px) {
-    body{
-        margin: 0 auto;
-        background-position: -1.5em;
-        background-size: 115%;
-    }
-    
-    header{
-        text-align: center;
-        max-width: 70%;
-    }
-    
-    h2{
-        margin-top: 50px;
-        color: rgb( 156, 186, 181);
-        font-family: 'Cormorant Garamond', serif;
-        font-size: 2em;
-        text-align: left;
-        margin-bottom: 20px;
-    }
-    
-    
-    .Trajan-concept { 
-        font-family: trajan-color, serif;
-        font-style: normal;
-        font-weight: 400;
-        font-feature-settings: "ss12";
-        font-size: 5em;
-        line-height: 1.2em;
-        text-align: left;
-        margin-top: -5px;
-        margin-bottom: 30px;
-    }
-    
-    .odetteWatching{
-        max-width: 85%;
-        margin-bottom: -30px;
-        z-index: -1;
-        margin-left: 100px;
-    }
-    
-    .caption{
-        background-color:rgb(246, 217, 208);
-        padding: 10px 20px;
-        color: rgb(156, 186, 181); 
-        font-family: 'Montserrat', sans-serif;
-        font-size: 0.8em;
-        line-height: 1.5em;
-        text-align: left;
-        max-width: 70%;
-        position: relative;
-        margin: 0 auto;
-        -webkit-box-shadow: 9px 14px 29px -11px rgba(156, 186, 181,1);
-        margin-bottom: 20px;
-        margin-left: 120px;
-    }
-    
-    .about{
-        background-color: rgb( 156, 186, 181,.8);
-        color: ivory;
-        font-family: 'Montserrat', sans-serif;
-        font-size: 1rem;
-        line-height: 1.8em;
-        margin: 0 auto ;
-        padding: 10px 30px;
-    }
-
-    .about>p{
-        max-width:50%;
-        margin-left: 190px;
-        padding-top: 25px;
-    }
-    
-    
-    .img{
-        font-size: 0;
-    }
-    
-    .transparentImage{
-        background-color: rgb( 156,186,181,.8);
-        text-align: center;
-    }
-    
-    .OdetteHandsCrossed{
-        max-width: 120%;
-        opacity: 50%;
-        margin-left: -100%;
-    }
-    
-    .info-align{
-        margin: 0 auto;
-        display: flex;
-        max-width:80%;
-    }
-
-    .data{
-        margin: 0 auto;
-    }
-
-    .data-1{
-        margin-right: 15%;
-    }
-    
-    .facts_Nums{
-        color: rgb(156, 186, 181);
-        text-align: center;
-        margin-bottom: 10%;
-    }
-    
-    .facts_Nums>h1{
-        font-family:'Montserrat', sans-serif;
-        font-size: 1.5rem;
-        margin-top: 3rem;
-        font-weight: 900;
-        margin-bottom: -30px;;
-    }
-    
-    .num{
-        font-size: 5rem;
-        font-family: trajan-color, serif;
-        font-feature-settings: "ss14";
-        line-height: 1em;
-        text-justify: auto;
-    }
-    
-    a{
-        text-decoration: none;
-    }
-    
-    .text{
-        font-family:'Montserrat', sans-serif;
-        font-size: 1em;
-        margin-top: -5em;
-    }
-    
-    .quote{
-        background-color:rgb(246, 217, 208,.5);
-        text-align: center;
-        padding-bottom: 30px;
-        -webkit-box-shadow: 9px 14px 29px -11px rgba(156, 186, 181,1);
-    }
-    
-    .quote>p{
-        max-width: 50%;
-        font-family: 'Cormorant Garamond', serif;
-        color: #9CBAB5;
-        font-size: 4rem;
-        padding-top: 1em;
-        padding-bottom: 0.5em;
-        margin: 30px auto;
-    }
-    
-    .sources{
-        font-family: 'Times New Roman', Times, serif;
-        color: #9CBAB5;
-        text-align: center;
-        text-decoration: none;
-        padding-top:50px;
-        padding-bottom: 40px;
-        font-size: 1.1em;
-    }
-    
-    .sources, a{
-        color: #9CBAB5;
-
-    }
-    
-    span{
-        font-family: 'Montserrat', sans-serif;
-        color: #9CBAB5;
-        font-size: 1em;
-        font-weight: bold;
-    }
-    
-    footer{
-        background-color: #9CBAB5;
-        padding: 10px;
-        text-align: center;
-        color: ivory;
-        font-family: 'Montserrat', sans-serif;
-    }
-}
-
-@media only screen and (min-width: 1200px) {
+/*@media only screen and (min-width: 1200px) {
     
     header{
         text-align: center;
@@ -543,4 +461,4 @@ footer{
         max-width: 65%;
     
 }
-}
+}*/
