--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,10 @@
 
-/*@media only screen 
-and (min-device-width: 360px) 
-and (max-device-width: 812px) {*/
+@media screen 
+and (min-device-width: 200px) {
 
 body{
-    background-position: -1.5em;
-    background-size: 115%;
+    background-size: 100%;
+    background-repeat: repeat;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -55,11 +54,17 @@ h2{
     background-color: rgb( 156, 186, 181,.8);
     color: ivory;
     font-family: 'Montserrat', sans-serif;
-    font-size: 1rem;
-    line-height: 1.8em;
+    font-size: 1em;
+    line-height: 1.5em;
     margin: 50px auto 0 auto;
     padding: 10px 30px;
     text-align: left;
+}
+
+.about > p{
+    padding-top: 2em;
+    align-content: center;
+    margin: 0 auto;
 }
 
 .img{
@@ -72,8 +77,8 @@ h2{
 }
 
 .OdetteHandsCrossed{
-    margin-left: -3%;
-    max-width: 110%;
+    margin-left: 20px;
+    max-width: 80%;
     opacity: 50%;
     
 }
@@ -152,13 +157,13 @@ footer{
     text-align: center;
 }
 
-
+}
 
 
 
 @media only screen 
-  and (min-device-width: 740px) 
-  and (max-device-width: 767px) {
+  and (min-device-width: 667px) 
+  and (max-device-width: 719px) {
 
 
     header{
@@ -201,18 +206,19 @@ footer{
         margin: 0 auto;
     }
 
-    .info-align{
-        margin: 0 auto;
-        display: flex;
-        max-width:80%;
-    }
 
     .OdetteHandsCrossed{
         max-width: 50%;
     }
 
+.info-align{
+        margin: 0 auto;
+        display: flex;
+        max-width:80%;
+    }
+
     .data{
-        margin: 0 10%;
+        margin: 0 5%;
     }
 
     .data-1{
@@ -254,14 +260,9 @@ footer{
 
 
 @media screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 2000px) { 
+  and (min-device-width: 720px) 
+  and (max-device-width: 900px) { 
 
-
-body{
-    margin: 0 auto;
-    background-size: 115%;
-}
 
 header{
     display: flex;
@@ -275,62 +276,43 @@ h2{
     margin-top: 50px;
     color: rgb( 156, 186, 181);
     font-family: 'Cormorant Garamond', serif;
-    font-size: 1.5em;
+    font-size: 1.8em;
     text-align: left;
     margin-bottom: 20px;
 }
 
 
 .Trajan-concept { 
-    font-family: trajan-color, serif;
-    font-style: normal;
-    font-weight: 400;
-    font-feature-settings: "ss12";
-    font-size: 4em;
+    font-size: 3em;
     line-height: 1.2em;
     text-align: left;
     margin-top: -5px;
     max-width: 20%;
 }
 
+.odetteWatching{
+    max-width: 320px;
+}
 
 .header-img{
     margin-top: 100px;
 }
 
-.odetteWatching{
-    width: 95%;
-    margin-top: 20px;
-    margin-bottom: -20px;
-}
 
-.caption{
-    background-color:rgb(246, 217, 208);
-    padding: 5px 10px;
-    color: rgb(156, 186, 181); 
-    font-family: 'Montserrat', sans-serif;
-    font-size: 0.5em;
-    line-height: 1.5em;
-    text-align: left;
-    width: 80%;
-    position: relative;
-    -webkit-box-shadow: 9px 14px 29px -11px rgba(156, 186, 181,1);
-    margin: 0 4%;
-}
 
 .about{
     background-color: rgb( 156, 186, 181,.8);
     color: ivory;
     font-family: 'Montserrat', sans-serif;
-    font-size: 0.63em;
-    line-height: 2em;
+    font-size: 0.8em;
+    line-height: 1.5em;
     margin: 0 auto ;
-    padding: 10px 30px;
-    width:100%;
+    padding: 0.5em;
+    width: 90%;
 }
 .about > p{
-    max-width: 60%;
-    margin-left: 50px;
+    max-width: 70%;
+    margin-left: 55px;
 }      
 
 #about{
@@ -347,7 +329,8 @@ h2{
 }
 
 .OdetteHandsCrossed{
-    max-width: 150%;
+    padding-top: 10px;
+    max-width: 140%;
     opacity: 50%;
     margin-left: -125px;
 }
@@ -444,21 +427,158 @@ footer{
   }
 
 
-/*@media only screen and (min-width: 1200px) {
-    
+
+
+@media screen 
+  and (min-device-width: 900px) 
+  and (max-device-width: 2000px) { 
+
     header{
-        text-align: center;
-        max-width: 65%;
+        display: flex;
+        max-width: 70%;
+        margin: 0 auto;
     }
-
-    .OdetteHandsCrossed{
-        max-width: 140%;
-        opacity: 50%;
-        margin-left: -100%;
-    }
-
-    .caption{
-        max-width: 65%;
     
-}
-}*/
+    
+    
+    h2{
+        margin-top: 50px;
+        color: rgb( 156, 186, 181);
+        font-family: 'Cormorant Garamond', serif;
+        font-size: 2em;
+        text-align: left;
+        margin-bottom: 20px;
+    }
+    
+    
+    .Trajan-concept { 
+        font-size: 4em;
+        line-height: 1.2em;
+        text-align: left;
+        margin-top: -5px;
+        max-width: 20%;
+    }
+    
+    .odetteWatching{
+        max-width: 350px;
+    }
+    
+    .header-img{
+        margin-top: 100px;
+    }
+    
+    
+    
+    .about{
+        background-color: rgb( 156, 186, 181,.8);
+        color: ivory;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 1em;
+        line-height: 1.5em;
+        margin: 0 auto ;
+        padding: 0.5em;
+        width: 90%;
+    }
+    .about > p{
+        max-width: 60%;
+        margin-left: 12em;
+    }      
+    
+    #about{
+        display: flex;
+    }
+    
+    .img{
+        font-size: 0;
+    }
+    
+    .transparentImage{
+        width: 40%;
+        background-color: rgb( 156,186,181,.8);
+    }
+    
+    .OdetteHandsCrossed{
+        padding-top: 10px;
+        max-width: 90%;
+        opacity: 50%;
+        margin-left: -125px;
+    }
+    
+    .info-align{
+        margin: 0 auto;
+        display: flex;
+        max-width:80%;
+    }
+    
+    .data{
+        margin: 0 auto;
+    }
+    
+    .data-1{
+        margin-right: 10%;
+    }
+    
+    .facts_Nums{
+        color: rgb(156, 186, 181);
+        text-align: center;
+    }
+    
+    .facts_Nums>h1{
+        font-family:'Montserrat', sans-serif;
+        font-size: 2rem;
+        margin-top: 3rem;
+        font-weight: 900;
+    }
+    
+    .num{
+        font-size: 6rem;
+        font-family: trajan-color, serif;
+        font-feature-settings: "ss14";
+        line-height: 1em;
+        text-justify: auto;
+    }
+    
+    a{
+        text-decoration: none;
+    }
+    
+    .text{
+        font-family:'Montserrat', sans-serif;
+        font-size: 1em;
+        margin-top: -5em;
+    }
+    
+    .quote{
+        background-color:rgb(246, 217, 208,.5);
+        text-align: center;
+        padding-bottom: 30px;
+        -webkit-box-shadow: 9px 14px 29px -11px rgba(156, 186, 181,1);
+    }
+    
+    .quote>p{
+        max-width: 50%;
+        font-family: 'Cormorant Garamond', serif;
+        color: #9CBAB5;
+        font-size: 4rem;
+        padding-top: 1em;
+        padding-bottom: 1em;
+        margin: 20px auto;
+    }
+    
+    .sources, a{
+        color: #9CBAB5;
+    }
+    
+    span{
+        font-family: 'Montserrat', sans-serif;
+        color: #9CBAB5;
+        font-size: 0.8em;
+        font-weight: bold;
+    }
+    
+    }
+    
+
+    
+
+  
