--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -430,8 +430,7 @@ footer{
 
 
 @media screen 
-  and (min-device-width: 900px) 
-  and (max-device-width: 2000px) { 
+  and (min-device-width: 900px)  { 
 
     header{
         display: flex;
